deploy/kubernetes/blocktown-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocktown
  namespace: flameblock
spec:
  selector:
    matchLabels:
      app: blocktown
      component: core
  replicas: 1
  template:
    metadata:
      labels:
        app: blocktown
        component: core
    spec:
      containers:
      - name: blocktown
        image: gargath/blocktown:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 200m
            memory: 250Mi
