deploy/kubernetes/flameblock-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flameblock-collector
  namespace: flameblock
spec:
  selector:
    matchLabels:
      app: flameblock
      component: collector
  replicas: 1
  template:
    metadata:
      labels:
        app: flameblock
        component: collector
    spec:
      containers:
      - name: collector
        image: gargath/flameblock-collector:latest
        args:
        - --redis-sentinel-master=mymaster
        - --redis-sentinels=rfs-flameblock-redis:26379
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 100m
            memory: 150Mi
