deploy/kubernetes/blocktown-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocktown
  namespace: flameblock
spec:
  selector:
    app: blocktown
    component: core
  ports:
  - protocol: TCP
    port: 3000
    targetPort:  3000
    name: web
  type: ClusterIP
