deploy/kubernetes/flameblock-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flameblock-collector
  namespace: flameblock
spec:
  selector:
    app: flameblock
    component: collector
  ports:
  - protocol: TCP
    port: 8000
    targetPort:  8000
    name: webhooks
  type: ClusterIP
