deploy/kubernetes/flameblock-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flameblock-docs
  namespace: flameblock
spec:
  selector:
    app: flameblock
    component: docs
  ports:
  - protocol: TCP
    port: 80
    targetPort:  80
    name: web
  type: ClusterIP
