deploy/kubernetes/flameblock-visualizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flameblock-visualizer
  namespace: flameblock
spec:
  selector:
    app: flameblock
    component: visualizer
  ports:
  - protocol: TCP
    port: 80
    targetPort:  80
    name: web
  type: ClusterIP
