deploy/kubernetes/console-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nsolid-console
  namespace: flameblock
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/$1"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: 'Authentication Required - console'
spec:
  rules:
  - host: nsolid.g.lightweaver.info
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: nsolid-console
          servicePort: 6753
