deploy/kubernetes/flameblock-docs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flameblock-docs
  namespace: flameblock
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: flamedocs.g.lightweaver.info
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: flameblock-docs
          servicePort: 80
