deploy/kubernetes/flameblock-visualizer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flameblock-visualizer
  namespace: flameblock
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: flameblock.g.lightweaver.info
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: flameblock-visualizer
          servicePort: 80
